charts/surfsense/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surfsense-backend
  namespace: surfsense
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: surfsense-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: surfsense-backend
    spec:
      containers:
      - name: surfsense-backend
        image: ghcr.io/modsetter/surfsense_backend:v1.0.1
        ports:
          - containerPort: 8000
            name: http
            protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            nvidia.com/gpu: 1
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8000
          timeoutSeconds: 1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: surfsense-backend
  name: surfsense-backend
  namespace: surfsense
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: surfsense-backend
  type: ClusterIP
