charts/surfsense/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surfsense-ui
  namespace: surfsense
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: surfsense-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: surfsense-ui
    spec:
      containers:
      - name: surfsense-ui
        image: ghcr.io/modsetter/surfsense_ui:latest
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
        imagePullPolicy: IfNotPresent
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 3000
          timeoutSeconds: 1
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: surfsense-ui
  name: surfsense-ui
  namespace: surfsense
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: surfsense-ui
  type: ClusterIP
